syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: Type
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | %empty

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB
   18       | error RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | error RC

   27 StmtList: Stmt StmtList
   28         | %empty

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | error SEMI

   36 DefList: Def DefList
   37        | %empty

   38 Def: Specifier DecList SEMI

   39 DecList: Dec
   40        | Dec COMMA DecList

   41 Dec: VarDec
   42    | VarDec ASSIGNOP Exp

   43 Exp: Exp ASSIGNOP Exp
   44    | Exp AND Exp
   45    | Exp OR Exp
   46    | Exp RELOP Exp
   47    | Exp PLUS Exp
   48    | Exp MINUS Exp
   49    | Exp STAR Exp
   50    | Exp DIV Exp
   51    | LP Exp RP
   52    | MINUS Exp
   53    | NOT Exp
   54    | ID LP Args RP
   55    | ID LP RP
   56    | Exp LB Exp RB
   57    | Exp DOT ID
   58    | ID
   59    | INT
   60    | FLOAT

   61 Args: Exp COMMA Args
   62     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 18 21 26 35
INT (258) 17 59
FLOAT (259) 60
ID (260) 13 15 16 19 20 54 55 57 58
Type (261) 9
ASSIGNOP (262) 42 43
OR (263) 45
AND (264) 44
RELOP (265) 46
PLUS (266) 47
MINUS (267) 48 52
STAR (268) 49
DIV (269) 50
NOT (270) 53
LP (271) 19 20 32 33 34 51 54 55
RP (272) 19 20 21 32 33 34 51 54 55
LB (273) 17 56
RB (274) 17 18 56
DOT (275) 57
SEMI (276) 4 5 29 31 35 38
COMMA (277) 8 22 40 61
STRUCT (278) 11 12
LC (279) 11 25
RC (280) 11 25 26
RETURN (281) 31
IF (282) 32 33
WHILE (283) 34
ELSE (284) 33
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6, on right: 2
ExtDecList (35)
    on left: 7 8, on right: 4 8
Specifier (36)
    on left: 9 10, on right: 4 5 6 24 38
StructSpecifier (37)
    on left: 11 12, on right: 10
OptTag (38)
    on left: 13 14, on right: 11
Tag (39)
    on left: 15, on right: 12
VarDec (40)
    on left: 16 17 18, on right: 7 8 17 24 41 42
FunDec (41)
    on left: 19 20 21, on right: 6
VarList (42)
    on left: 22 23, on right: 19 22
ParamDec (43)
    on left: 24, on right: 22 23
CompSt (44)
    on left: 25 26, on right: 6 30
StmtList (45)
    on left: 27 28, on right: 25 27
Stmt (46)
    on left: 29 30 31 32 33 34 35, on right: 27 32 33 34
DefList (47)
    on left: 36 37, on right: 11 25 36
Def (48)
    on left: 38, on right: 36
DecList (49)
    on left: 39 40, on right: 38 40
Dec (50)
    on left: 41 42, on right: 39 40
Exp (51)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60,
    on right: 29 31 32 33 34 42 43 44 45 46 47 48 49 50 51 52 53 56
    57 61 62
Args (52)
    on left: 61 62, on right: 54 61


State 0

    0 $accept: . Program $end

    Type    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

    9 Specifier: Type .

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    Type    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   18 VarDec: error . RB
   21 FunDec: error . RP

    RP  shift, and go to state 20
    RB  shift, and go to state 21


State 14

   16 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 22

    $default  reduce using rule 16 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 23


State 17

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 24
    COMMA  shift, and go to state 25

    $default  reduce using rule 7 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 26
    LC     shift, and go to state 27

    CompSt  go to state 28


State 19

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    Type    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 30
    Def              go to state 31


State 20

   21 FunDec: error RP .

    $default  reduce using rule 21 (FunDec)


State 21

   18 VarDec: error RB .

    $default  reduce using rule 18 (VarDec)


State 22

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    Type    shift, and go to state 1
    RP      shift, and go to state 32
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 34
    ParamDec         go to state 35


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 36


State 25

    8 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 37
    ID     shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 17


State 26

   26 CompSt: error . RC

    RC  shift, and go to state 40


State 27

   25 CompSt: LC . DefList StmtList RC

    Type    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 31


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   38 Def: Specifier . DecList SEMI

    error  shift, and go to state 37
    ID     shift, and go to state 38

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 30

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


State 31

   36 DefList: Def . DefList

    Type    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 31


State 32

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 33

   24 ParamDec: Specifier . VarDec

    error  shift, and go to state 37
    ID     shift, and go to state 38

    VarDec  go to state 47


State 34

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 48


State 35

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 49

    $default  reduce using rule 23 (VarList)


State 36

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 50


State 37

   18 VarDec: error . RB

    RB  shift, and go to state 21


State 38

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 39

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 40

   26 CompSt: error RC .

    $default  reduce using rule 26 (CompSt)


State 41

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 27
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 62
    Stmt      go to state 63
    Exp       go to state 64


State 42

   17 VarDec: VarDec . LB INT RB
   41 Dec: VarDec .
   42    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 65
    LB        shift, and go to state 24

    $default  reduce using rule 41 (Dec)


State 43

   38 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 66


State 44

   39 DecList: Dec .
   40        | Dec . COMMA DecList

    COMMA  shift, and go to state 67

    $default  reduce using rule 39 (DecList)


State 45

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 46

   36 DefList: Def DefList .

    $default  reduce using rule 36 (DefList)


State 47

   17 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 24 (ParamDec)


State 48

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 49

   22 VarList: ParamDec COMMA . VarList

    Type    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 68
    ParamDec         go to state 35


State 50

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 51

   26 CompSt: error . RC
   35 Stmt: error . SEMI

    SEMI  shift, and go to state 69
    RC    shift, and go to state 40


State 52

   59 Exp: INT .

    $default  reduce using rule 59 (Exp)


State 53

   60 Exp: FLOAT .

    $default  reduce using rule 60 (Exp)


State 54

   54 Exp: ID . LP Args RP
   55    | ID . LP RP
   58    | ID .

    LP  shift, and go to state 70

    $default  reduce using rule 58 (Exp)


State 55

   52 Exp: MINUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 71


State 56

   53 Exp: NOT . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 72


State 57

   51 Exp: LP . Exp RP

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 73


State 58

   31 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 74


State 59

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 75


State 60

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 76


State 61

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 62

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 77


State 63

   27 StmtList: Stmt . StmtList

    error   shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 27
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 78
    Stmt      go to state 63
    Exp       go to state 64


State 64

   29 Stmt: Exp . SEMI
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 79
    OR        shift, and go to state 80
    AND       shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    LB        shift, and go to state 87
    DOT       shift, and go to state 88
    SEMI      shift, and go to state 89


State 65

   42 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 90


State 66

   38 Def: Specifier DecList SEMI .

    $default  reduce using rule 38 (Def)


State 67

   40 DecList: Dec COMMA . DecList

    error  shift, and go to state 37
    ID     shift, and go to state 38

    VarDec   go to state 42
    DecList  go to state 91
    Dec      go to state 44


State 68

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 69

   35 Stmt: error SEMI .

    $default  reduce using rule 35 (Stmt)


State 70

   54 Exp: ID LP . Args RP
   55    | ID LP . RP

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57
    RP     shift, and go to state 92

    Exp   go to state 93
    Args  go to state 94


State 71

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   52    | MINUS Exp .
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    STAR  shift, and go to state 85
    DIV   shift, and go to state 86
    LB    shift, and go to state 87
    DOT   shift, and go to state 88

    $default  reduce using rule 52 (Exp)


State 72

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   53    | NOT Exp .
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    LB   shift, and go to state 87
    DOT  shift, and go to state 88

    $default  reduce using rule 53 (Exp)


State 73

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   51    | LP Exp . RP
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 79
    OR        shift, and go to state 80
    AND       shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    RP        shift, and go to state 95
    LB        shift, and go to state 87
    DOT       shift, and go to state 88


State 74

   31 Stmt: RETURN Exp . SEMI
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 79
    OR        shift, and go to state 80
    AND       shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    LB        shift, and go to state 87
    DOT       shift, and go to state 88
    SEMI      shift, and go to state 96


State 75

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 97


State 76

   34 Stmt: WHILE LP . Exp RP Stmt
